# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/lock.py:
  Cleanups to make pychecker happy

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/__init__.py, modules/catalyst/spawn.py:
  Grab just the first value return from the now-working call to
  resource.getrlimit()

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  -examples/netboot_template.spec, -modules/catalyst/target/netboot.py,
  -targets/netboot/netboot-chroot.sh, -targets/netboot/netboot-combine.sh,
  -targets/netboot/netboot-controller.sh, -targets/netboot/netboot-image.sh:
  Whack the outdated and non-functional netboot target

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/__init__.py, modules/catalyst/arch/__init__.py,
  modules/catalyst/arch/alpha.py, modules/catalyst/arch/arm.py,
  modules/catalyst/arch/hppa.py, modules/catalyst/arch/ia64.py,
  modules/catalyst/arch/mips.py, modules/catalyst/arch/s390.py,
  modules/catalyst/arch/sh.py, modules/catalyst/config.py,
  modules/catalyst/error.py, modules/catalyst/hash.py,
  modules/catalyst/output.py, modules/catalyst/spawn.py,
  modules/catalyst/support.py, modules/catalyst/target/__init__.py,
  modules/catalyst/target/embedded.py,
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/util.py:
  Small cleanups to make pychecker happy

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/util.py:
  import cleanups

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
  modules/catalyst/util.py:
  Move read_makeconf() and parse_makeconf() from catalyst.support to
  catalyst.util
